--- a/app/src/main/res/layout/roster_builder_fragment.xml
+++ b/app/src/main/res/layout/roster_builder_fragment.xml
@@ -3,9 +3,51 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rosterBuilderLudiConstraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layoutDescription="@xml/roster_builder_fragment_scene">
+
+    <io.usys.report.ui.views.LudiConstraintLayout
+        android:id="@+id/rosterBuilderLudiInnerConstraintLayout"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/reportBuilderLudiTxtRosterType"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:text="Roster Type"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/reportBuilderLudiBtnSubmitRoster"
+            style="@android:style/Widget.Holo.Light.Button.Small"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+            android:background="#6C3D3D"
+            android:text="Submit Roster"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <Spinner
+            android:id="@+id/rosBuilderLudiSpinRosterType"
+            android:layout_width="145dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/reportBuilderLudiTxtRosterType" />
+    </io.usys.report.ui.views.LudiConstraintLayout>
 
     <include
         android:id="@+id/rosterBuilderLudiRosterView"
@@ -15,7 +57,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@+id/rosterBuilderLudiInnerConstraintLayout" />
 
 
 </io.usys.report.ui.views.LudiConstraintLayout>
