--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,6 +24,8 @@
     <color name="colorTextAccent">@color/black</color>
     <color name="colorWindowBackground">@color/white</color>
 
+    <color name="ludiRosterCardSelected">#FFCDF8CF</color>
+
     <!-- Tab colors -->
     <color name="tabBackground">#FFFFFF</color>
     <color name="tabSelectedTextColor">#3F51B5</color>
