--- a/app/src/main/res/layout/ludi_roster_spinner.xml
+++ b/app/src/main/res/layout/ludi_roster_spinner.xml
@@ -2,14 +2,14 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="100dp"
+    android:layout_height="40dp"
     android:layout_margin="3dp">
 
     <TextView
         android:id="@+id/ludiRosterSpinTxt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_margin="10dp"
         android:text="Tryout"
         android:textSize="16sp"
