--- a/app/src/main/res/layout/card_player_medium_grid.xml
+++ b/app/src/main/res/layout/card_player_medium_grid.xml
@@ -19,23 +19,25 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="200dp"
-        android:layout_height="90dp">
+        android:layout_height="wrap_content">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/cardPlayerMediumGridImgProfile"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginStart="4dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="2dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="2dp"
             android:src="@drawable/ysr_empty_profile_icon_blue"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.145" />
+            app:layout_constraintVertical_bias="0.111" />
 
         <TextView
             android:id="@+id/cardPlayerMediumGridTxtName"
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="20dp"
             android:layout_marginStart="4dp"
             android:layout_marginEnd="4dp"
             android:autoSizeMaxTextSize="20sp"
@@ -45,66 +47,55 @@
             android:maxLines="1"
             android:text="Player Name"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/cardPlayerMediumGridImgProfile"
+            app:layout_constraintBottom_toTopOf="@+id/cardPlayerMediumGridTxtOne"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toEndOf="@+id/cardPlayerMediumGridImgProfile"
-            app:layout_constraintTop_toTopOf="@+id/cardPlayerMediumGridImgProfile"
-            app:layout_constraintVertical_bias="0.0"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.062"
             app:layout_constraintVertical_chainStyle="packed" />
 
         <TextView
             android:id="@+id/cardPlayerMediumGridTxtOne"
             android:layout_width="51dp"
             android:layout_height="16dp"
-            android:layout_marginStart="8dp"
+            android:layout_marginEnd="16dp"
             android:text="Text One"
-            android:textSize="12sp"
-            app:layout_constraintBottom_toBottomOf="@+id/cardPlayerMediumGridImgIconOne"
-            app:layout_constraintStart_toEndOf="@+id/cardPlayerMediumGridImgIconOne"
-            app:layout_constraintTop_toTopOf="@+id/cardPlayerMediumGridImgIconOne"
-            app:layout_constraintVertical_bias="0.0" />
+            android:textSize="10sp"
+            app:layout_constraintBottom_toBottomOf="@+id/cardPlayerMediumGridImgProfile"
+            app:layout_constraintEnd_toStartOf="@+id/cardPlayerMediumGridChkSelected"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@+id/cardPlayerMediumGridImgProfile" />
 
         <TextView
             android:id="@+id/cardPlayerMediumGridTxtTwo"
             android:layout_width="51dp"
             android:layout_height="16dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginStart="2dp"
             android:text="Text Two"
-            android:textSize="12sp"
+            android:textSize="10sp"
             app:layout_constraintBottom_toBottomOf="@+id/cardPlayerMediumGridImgIconTwo"
             app:layout_constraintStart_toEndOf="@+id/cardPlayerMediumGridImgIconTwo"
             app:layout_constraintTop_toBottomOf="@+id/cardPlayerMediumGridTxtOne"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="0.0"
+            tools:visibility="gone" />
 
         <ImageView
             android:id="@+id/cardPlayerMediumGridImgIconTwo"
-            android:layout_width="16dp"
-            android:layout_height="16dp"
+            android:layout_width="8dp"
+            android:layout_height="11dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="4dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cardPlayerMediumGridImgIconOne"
-            app:srcCompat="@drawable/ysr_email_icon_red" />
-
-        <ImageView
-            android:id="@+id/cardPlayerMediumGridImgIconOne"
-            android:layout_width="16dp"
-            android:layout_height="16dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cardPlayerMediumGridImgProfile"
-            app:srcCompat="@drawable/org_blue"
-            app:tint="#FF0000" />
+            app:srcCompat="@drawable/ysr_email_icon_red"
+            tools:layout_editor_absoluteY="40dp"
+            tools:visibility="gone" />
 
         <CheckBox
             android:id="@+id/cardPlayerMediumGridChkSelected"
             android:layout_width="0dp"
             android:layout_height="20dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginBottom="4dp"
+            android:layout_marginBottom="2dp"
             android:hapticFeedbackEnabled="true"
             android:scaleX=".75"
             android:scaleY=".75"
@@ -112,7 +103,8 @@
             android:textSize="10sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/cardPlayerMediumGridTxtTwo" />
+            app:layout_constraintTop_toBottomOf="@+id/cardPlayerMediumGridTxtName"
+            app:layout_constraintVertical_bias="0.181" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
