--- a/app/src/main/res/layout/roster_builder_fragment.xml
+++ b/app/src/main/res/layout/roster_builder_fragment.xml
@@ -17,6 +17,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <!--        -->
         <TextView
             android:id="@+id/rosterBuilderLudiTxtRosterType"
             android:layout_width="wrap_content"
@@ -26,52 +27,75 @@
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/rosterBuilderLudiSpinRosterType"
-            app:layout_constraintEnd_toStartOf="@+id/rosterBuilderLudiSpinRosterType"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.205" />
 
         <Spinner
             android:id="@+id/rosterBuilderLudiSpinRosterType"
             android:layout_width="145dp"
-            android:layout_height="40dp"
+            android:layout_height="45dp"
             android:layout_margin="8dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginTop="1dp"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/border_shadow_white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
-
-<!--        -->
-
-
-        <Spinner
-            android:id="@+id/rosterBuilderLudiSpinRosterLimit"
-            android:layout_width="145dp"
-            android:layout_height="40dp"
-            android:layout_margin="8dp"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/rosterBuilderLudiSpinRosterType"
+            app:layout_constraintTop_toBottomOf="@+id/rosterBuilderLudiSpinRosterTypeText"
             app:layout_constraintVertical_bias="0.0" />
 
         <TextView
             android:id="@+id/rosterBuilderLudiSubTxt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="36dp"
             android:layout_marginStart="24dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="2dp"
             android:layout_marginBottom="10dp"
             android:text="You have 18 players selected."
             android:textSize="14sp"
             android:textStyle="normal"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/rosterBuilderLudiSpinRosterLimit"
+            app:layout_constraintEnd_toStartOf="@+id/textView3"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/rosterBuilderLudiTxtRosterType"
             app:layout_constraintVertical_bias="0.0" />
+
+        <TextView
+            android:id="@+id/rosterBuilderLudiSpinRosterSizeText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="2dp"
+            android:text="Roster Size"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toTopOf="@+id/rosterBuilderLudiSpinRosterLimit"
+            app:layout_constraintStart_toStartOf="@+id/rosterBuilderLudiSpinRosterLimit"
+            app:layout_constraintTop_toBottomOf="@+id/rosterBuilderLudiSpinRosterType"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <TextView
+            android:id="@+id/rosterBuilderLudiSpinRosterTypeText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="76dp"
+            android:text="Roster Type"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/rosterBuilderLudiSpinRosterType"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Spinner
+            android:id="@+id/rosterBuilderLudiSpinRosterLimit"
+            android:layout_width="145dp"
+            android:layout_height="45dp"
+            android:layout_margin="8dp"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/border_shadow_white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
     </io.usys.report.ui.views.LudiConstraintLayout>
 
     <include
