--- a/app/src/main/res/layout/roster_builder_fragment.xml
+++ b/app/src/main/res/layout/roster_builder_fragment.xml
@@ -18,25 +18,23 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <!--        -->
+
         <TextView
             android:id="@+id/rosterBuilderLudiTxtRosterType"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginStart="24dp"
+            android:layout_marginTop="8dp"
             android:text="Roster Type"
             android:textSize="18sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/rosterBuilderLudiSpinRosterType"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.205" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Spinner
             android:id="@+id/rosterBuilderLudiSpinRosterType"
             android:layout_width="145dp"
-            android:layout_height="45dp"
-            android:layout_margin="8dp"
-            android:layout_marginTop="1dp"
+            android:layout_height="35dp"
             android:layout_marginEnd="8dp"
             android:background="@drawable/border_shadow_white"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -47,7 +45,7 @@
         <TextView
             android:id="@+id/rosterBuilderLudiSubTxt"
             android:layout_width="0dp"
-            android:layout_height="36dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginTop="2dp"
             android:layout_marginBottom="10dp"
@@ -78,19 +76,18 @@
             android:id="@+id/rosterBuilderLudiSpinRosterTypeText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
             android:layout_marginEnd="76dp"
             android:text="Roster Type"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/rosterBuilderLudiSpinRosterType"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="@+id/rosterBuilderLudiTxtRosterType" />
 
         <Spinner
             android:id="@+id/rosterBuilderLudiSpinRosterLimit"
             android:layout_width="145dp"
-            android:layout_height="45dp"
+            android:layout_height="35dp"
             android:layout_margin="8dp"
             android:layout_marginEnd="8dp"
             android:background="@drawable/border_shadow_white"
