--- a/app/src/main/res/layout/menu_player_position_popup.xml
+++ b/app/src/main/res/layout/menu_player_position_popup.xml
@@ -40,7 +40,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/linearLayout2"
+        android:id="@+id/menuPlayerChangeTeamsLayout"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:orientation="horizontal"
@@ -71,7 +71,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/linearLayout3"
+        android:id="@+id/menuPlayerIsSelectedLayout"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:orientation="horizontal"
@@ -79,7 +79,7 @@
         android:layout_margin="3dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
+        app:layout_constraintTop_toBottomOf="@+id/menuPlayerChangeTeamsLayout">
 
         <TextView
             android:id="@+id/menuPlayerTxtIsSelected"
@@ -106,7 +106,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
+        app:layout_constraintTop_toBottomOf="@+id/menuPlayerIsSelectedLayout">
 
         <TextView
             android:id="@+id/textView2"
