--- a/app/src/main/res/layout/card_player_formation.xml
+++ b/app/src/main/res/layout/card_player_formation.xml
@@ -45,6 +45,21 @@
             android:text="1"
             android:textSize="10sp" />
     </androidx.cardview.widget.CardView>
+
+    <TextView
+        android:id="@+id/cardPlayerFormationTxtTag"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="Tag"
+        android:textSize="9sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardPlayerFormationTxtName"
+        app:layout_constraintVertical_bias="0.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 
 
